--- a/index.html
+++ b/index.html
@@ -64,6 +64,9 @@
   .badge-normal { background-color: #0d6efd; }
   .badge-warn { background-color: #fd7e14; }
   .badge-high { background-color: #dc3545; }
+  .bg-light-subtle {
+  background-color: #f9f9fb;
+}
 </style>
 </head>
 <body>
@@ -292,12 +295,22 @@ function showModal(t) {
 const level = t.temp >= 50 ? "danger" : t.temp >= 45 ? "warning" : "safe";
 const advice = aiAdviceMap[chem]?.[level] || "No advice available.";
 
+const label = level === "danger" ? "🚨 Danger" :
+              level === "warning" ? "⚠️ Warning" : "✅ Safe";
+const alertClass = level === "danger" ? "danger" : level === "warning" ? "warning" : "info";
+
 modalBody.innerHTML += `
   <hr>
-  <h6>🤖 AI Detection</h6>
-  <p><strong>Chemical:</strong> ${chem}</p>
-  <div class="alert alert-${level === 'danger' ? 'danger' : level === 'warning' ? 'warning' : 'info'}">
-    ${advice}
+  <div class="p-3 border border-${alertClass} rounded bg-light-subtle">
+    <h6 class="text-${alertClass} fw-bold mb-1">🤖 AI Detection Result</h6>
+    <p class="mb-1"><strong>Risk Level:</strong> <span class="text-${alertClass}">${label}</span></p>
+    <p class="mb-2"><strong>Chemical:</strong> ${chem}</p>
+    <p class="mb-2"><strong>Condition:</strong> ${advice}</p>
+    <ul class="mb-0 small">
+      <li>📌 Monitor for sensor anomalies</li>
+      <li>🛠️ Follow SOP for temperature control</li>
+      <li>📢 Notify operations if above 50°C</li>
+    </ul>
   </div>`;
   const modal = new bootstrap.Modal(document.getElementById('tankModal'));
   modal.show();
@@ -360,6 +373,112 @@ L.tileLayer("https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png").addTo(map);
 
 document.getElementById("sortSelect").addEventListener("change", renderTable);
 document.getElementById("filterSelect").addEventListener("change", renderTable);
+</script>
+  <script>
+const aiAdviceMap = {
+  "Ammonia": {
+    safe: "Stable. No action needed.",
+    warning: "Monitor temperature rise closely.",
+    danger: "Risk of vapor expansion. Reduce heating immediately."
+  },
+  "Benzene": {
+    safe: "Safe condition.",
+    warning: "Ventilate area and monitor sensors.",
+    danger: "Flammable state. Shut down heating and alert crew."
+  },
+  "Methanol": {
+    safe: "Normal range.",
+    warning: "Rising temp may cause vapor buildup.",
+    danger: "Explosion risk. Initiate emergency cooling now!"
+  }
+};
+
+function calculateRiskLevel(t) {
+  const latest = t.temp;
+  const previous = t.history.slice(-2)[0] || latest;
+  const delta = latest - previous;
+  const highRiskChemicals = ["Methanol", "Ammonia"];
+  const fastRising = delta >= 1.5;
+  if (latest >= 50 || (fastRising && highRiskChemicals.includes(t.chemical))) return "danger";
+  if (latest >= 45 || fastRising) return "warning";
+  return "safe";
+}
+
+function suggestAction(t, level) {
+  if (level === "danger") return "Shut down heating and trigger emergency cooling.";
+  if (level === "warning") return "Reduce heating, monitor every 2 minutes.";
+  return "Maintain monitoring schedule.";
+}
+
+function isEscalating(t) {
+  const h = t.history.slice(-3);
+  return h.length === 3 && h[0] < h[1] && h[1] < h[2];
+}
+
+function showModal(t) {
+  const modalLabel = document.getElementById("tankModalLabel");
+  modalLabel.textContent = `Tanker ${t.id} Details`;
+
+  const modalBody = document.getElementById("tankModalBody");
+
+  const heatingButton = `<button id="heatingToggle" class="btn btn-${t.heating ? 'danger' : 'success'} btn-sm mb-2">
+    Turn ${t.heating ? 'Off' : 'On'} Heating
+  </button>`;
+
+  modalBody.innerHTML = `
+    ${heatingButton}
+    <p><strong>Temperature:</strong> ${t.temp.toFixed(1)}°C</p>
+    <p><strong>Heating:</strong> <span id="heatingStatus">${t.heating ? 'On' : 'Off'}</span></p>
+    <ul>
+      <li>Reduce heating</li>
+      <li>Activate backup cooling</li>
+      <li>Inspect insulation</li>
+      <li>Verify sensors</li>
+      <li>Notify maintenance</li>
+    </ul>`;
+
+  const chem = t.chemical || "Unknown";
+  const level = calculateRiskLevel(t);
+  const advice = aiAdviceMap[chem]?.[level] || "No advice available.";
+  const alertClass = level;
+
+  modalBody.innerHTML += `
+    <hr>
+    <div class="alert alert-${alertClass}">
+      <strong>🤖 Smart Summary:</strong><br>
+      Chemical <strong>${chem}</strong> is currently at <strong>${t.temp.toFixed(1)}°C</strong>.<br>
+      ${level === 'danger' ? '🔥 Critical alert! Immediate action required.' :
+        level === 'warning' ? '⚠️ Condition escalating. Prepare response.' :
+        '✅ System stable.'}
+    </div>
+    <p><strong>🛠 AI Suggestion:</strong> ${suggestAction(t, level)}</p>
+  `;
+
+  if (isEscalating(t)) {
+    modalBody.innerHTML += `<div class="alert alert-warning">📈 Temperature trend is rising. AI suspects ongoing escalation.</div>`;
+  }
+
+  modalBody.innerHTML += `
+    <div class="mt-2 small text-muted">
+      <strong>🧠 AI Reasoning:</strong> ${
+        level === 'danger'
+          ? 'Temperature exceeds 50°C or rapid increase on a volatile chemical.'
+          : level === 'warning'
+          ? 'Fast temp rise or nearing risk zone.'
+          : 'Stable trend and safe range.'
+      }
+    </div>`;
+
+  const modal = new bootstrap.Modal(document.getElementById('tankModal'));
+  modal.show();
+
+  document.getElementById("heatingToggle").addEventListener("click", () => {
+    t.heating = !t.heating;
+    document.getElementById("heatingStatus").textContent = t.heating ? 'On' : 'Off';
+    document.getElementById("heatingToggle").textContent = `Turn ${t.heating ? 'Off' : 'On'} Heating`;
+    document.getElementById("heatingToggle").className = `btn btn-${t.heating ? 'danger' : 'success'} btn-sm mb-2`;
+  });
+}
 </script>
 </body>
 </html>
